[ADD]saas and celery in django

--- a/webcamera/webcam/templates/contact.html
+++ b/webcamera/webcam/templates/contact.html
@@ -3,6 +3,8 @@
 {% block title_block %}Home page{% endblock %}
 {% block body_block %}
     <div class="row">
-        <p>I am home</p>
+        <div>
+            <p>I am contact!</p>
+        </div>
     </div>
 {% endblock %}
