--- a/webcamera/webcam/templates/registration/logout.html
+++ b/webcamera/webcam/templates/registration/logout.html
@@ -3,6 +3,6 @@
 {% block title_block %}Home page{% endblock %}
 {% block body_block %}
     <div class="row">
-        <p>I am home</p>
+        <p>You had been logout.</p>
     </div>
 {% endblock %}
